[gd_scene load_steps=16 format=3 uid="uid://ci5j8awqi3j8v"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_a62lr"]
[ext_resource type="PackedScene" uid="uid://esuisvmjimqq" path="res://scenes/player/player_ghost.tscn" id="2_h2nj3"]
[ext_resource type="Texture2D" uid="uid://c60q0ojhgr3qd" path="res://scenes/player/textures/6x6.png" id="2_srda6"]
[ext_resource type="Script" path="res://scenes/interfaces/StateMachine.gd" id="3_ockid"]
[ext_resource type="Script" path="res://scenes/player/states/PlayerState.gd" id="4_gq13h"]
[ext_resource type="Script" path="res://scenes/player/states/PlayerMoveState.gd" id="5_imjbi"]
[ext_resource type="Script" path="res://scenes/player/states/PlayerJumpState.gd" id="6_w8w0l"]
[ext_resource type="Script" path="res://scenes/player/states/PlayerDashState.gd" id="7_2ogmg"]
[ext_resource type="Script" path="res://scenes/player/states/PlayerWallState.gd" id="8_xiw8d"]
[ext_resource type="Script" path="res://scenes/player/states/PlayerWallJumpState.gd" id="9_8isqv"]
[ext_resource type="Script" path="res://scenes/player/states/PlayerDoubleJump.gd" id="10_3xrrm"]
[ext_resource type="Script" path="res://scenes/player/states/PlayerReboundState.gd" id="11_8d2ix"]
[ext_resource type="Script" path="res://scenes/player/states/PlayerSpawnState.gd" id="12_migby"]

[sub_resource type="LabelSettings" id="LabelSettings_f682e"]
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d5in4"]
size = Vector2(6, 6)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
z_index = 5
collision_mask = 15
safe_margin = 0.2
script = ExtResource("1_a62lr")
ghost_node = ExtResource("2_h2nj3")
base_speed = 50
speed_increase_amount = 0.7
counter_dir_force_mult = 4.0
time_to_max_speed = 0.1
time_to_stop = 0.1
gravity = 1500.0
air_move_mult = 0.2

[node name="StateLabel" type="Label" parent="."]
offset_left = -38.0
offset_top = -17.0
offset_right = 40.0
offset_bottom = 13.0
text = "{STATE}"
label_settings = SubResource("LabelSettings_f682e")
horizontal_alignment = 1
autowrap_mode = 2

[node name="PlayerSprite" type="Sprite2D" parent="."]
z_index = 5
texture = ExtResource("2_srda6")
region_rect = Rect2(184, 0, 8, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_d5in4")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_ockid")
initial_state = NodePath("PlayerSpawnState")

[node name="PlayerState" type="Node" parent="StateMachine"]
script = ExtResource("4_gq13h")

[node name="PlayerMoveState" type="Node" parent="StateMachine"]
script = ExtResource("5_imjbi")

[node name="PlayerJumpState" type="Node" parent="StateMachine"]
script = ExtResource("6_w8w0l")

[node name="PlayerDashState" type="Node" parent="StateMachine"]
script = ExtResource("7_2ogmg")

[node name="PlayerWallState" type="Node" parent="StateMachine"]
script = ExtResource("8_xiw8d")

[node name="PlayerWallJumpState" type="Node" parent="StateMachine"]
script = ExtResource("9_8isqv")

[node name="PlayerDoubleJumpState" type="Node" parent="StateMachine"]
script = ExtResource("10_3xrrm")

[node name="PlayerReboundState" type="Node" parent="StateMachine"]
script = ExtResource("11_8d2ix")

[node name="PlayerSpawnState" type="Node" parent="StateMachine"]
script = ExtResource("12_migby")

[node name="Timers" type="Node" parent="."]

[node name="JumpGraceTimer" type="Timer" parent="Timers"]
wait_time = 0.1
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="Timers"]
wait_time = 0.1
one_shot = true

[node name="WallJumpGraceTimer" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="WallJumpBufferTimer" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="GhostTimer" type="Timer" parent="Timers"]
wait_time = 0.1
one_shot = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(2.38419e-07, 2.38419e-07)
scale = Vector2(0.5, 0.5)

[node name="GhostInstances" type="Node" parent="."]

[connection signal="timeout" from="Timers/GhostTimer" to="." method="_on_ghost_timer_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
